--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,9 @@
-# define your env variables for the test env here
+# create a .env.testing and define your env variables for the test env there and add these ones
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
+
+# Github Connect mail:
+GITHUB_MAIL="mail@address.com"
