--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,21 +4,21 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    github.id: '%env(GITHUB_ID)%'
+    github.id: "%env(GITHUB_ID)%"
 services:
     # default configuration for Services in *this* file
     _defaults:
-        autowire: true      # Automatically injects dependencies in your Services.
+        autowire: true # Automatically injects dependencies in your Services.
         autoconfigure: true # Automatically registers your Services as commands, event subscribers, etc.
 
     # makes classes in src/ available to be used as Services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: "../src/"
         exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+            - "../src/DependencyInjection/"
+            - "../src/Entity/"
+            - "../src/Kernel.php"
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
