--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
-# create a .env.testing and define your env variables for the test env there and add these ones
+# define your env variables for the test env here or create a .env.test.local to override them
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
@@ -6,4 +6,7 @@ PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 
 # Github Connect mail:
-GITHUB_MAIL="mail@address.com"
+GITHUB_MAIL="exemple@mail.com"
+###> github authentication credentials ###
+GITHUB_ID=exempleID
+###< github authentication credentials
