adding status tests on the other pages

--- a/.env.test
+++ b/.env.test
@@ -9,4 +9,5 @@ PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
 GITHUB_MAIL="exemple@mail.com"
 ###> github authentication credentials ###
 GITHUB_ID=exempleID
+GITHUB_SECRET=exempleSecret
 ###< github authentication credentials
